# chimera-lite

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: chimera-breadth-reducer.md  chimera-deep-extractor.md  chimera-paper-classifier.md  chimera-paper-triager.md  chimera-repo-scout.md  chimera-sprint-executor.md  chimera-verbatim-verifier.md  chimera-verify-runner.md
docs/: ACCEPTED_PARTIALS.md  MIGRATION_LINEAGE.md  ROADMAP.md  TECHNICAL_DEBT.md
docs/ARCHITECTURE/: ARCHITECTURE.md  NODE_ONTOLOGY.md  TAG_SYSTEM.md  THEORETICAL_FRAMEWORK.md
docs/audits/: L.0.md  M.0.md  M.5-e2e-smoke.md  N.A.0.md  N.B.0-reaudit.md  N.B.0.md  O.0.md  Q.0-reaudit.md  Q.0.md  ara-2604.24658-structure.md  ara-repo-structure.md  lens-criteria-reconciliation.md  mcp-architecture-review.md  model-routing-gaps.md  obsidian-mcp-necessity.md  phase-R-harness-reality.md  post-migration-pipeline-incidents.md  tag-system-consistency.md  workflow-drift-audit.md
docs/incidents/: 2026-06-30-mineru-not-on-path.md  2026-06-30-missing-prompts-tree.md  2026-06-30-pipeline-observability.md  2026-07-01-convert-swallow-as-skip.md  2026-07-01-mineru-capture-deadlock.md  2026-07-02-mineru-hang-in-mcp-server.md  2026-07-07-single-paper-ingest-migration-gap.md  2026-07-13-extract-node-double-markers.md  2026-07-13-silent-blocking-tools.md
docs/logs/: friction-260708.md  friction-260709.md  friction-260710.md  friction-260713.md
docs/phases/: CODENAMES.md  PHILOSOPHY.md  phase-H.md  phase-K.md  phase-L.B.md  phase-L.md  phase-M.md  phase-N.A.md  phase-N.B.md  phase-O.md  phase-P.md  phase-Q.md  phase-R.md
docs/plans/: Phase-L-batch.md  Phase-L.B-batch.md  Phase-M-batch.md  Phase-N.A-batch.md  Phase-O-batch.md  Phase-Q-batch.md  Phase-V.A-batch.md
docs/scratch/: GPT-confession.txt  tag.txt
mcp-servers/chimera-papers/: batch_filter_workflow.py  bootstrap.py  cli_presenter.py  daily_chimera_service.py  fetch_arxiv_workflow.py  filter_service.py  grounding.py  miner_tools.py  optics_lens_registry.py  optics_service.py  result_service.py  server.py  single_paper_extract.py  single_paper_ingest.py  single_paper_pipeline_service.py  staging_service.py  task_service.py  w2_breadth.py
mcp-servers/chimera-vault/: server.py  vault_query.py  vault_tools.py
prompts/chimera_sys/: extract_claims.j2  extract_node.j2
prompts/lenses/: agentic-illusion.md  forensic-leakage.md  math-decoration.md  ontological-map.md  state-collision.md  thermodynamic-decay.md
prompts/obsidian_tpl/: decision_node.j2  (+5 more)
scripts/: gen_architecture_diagram.py  seed_hsc3.py
tests/: test_ascend_node.py  test_chimera_tier.py  test_config_env.py  test_convert_worker.py  test_core_imports.py  test_daily_chimera_service.py  test_extract_paper.py  test_extract_schemas.py  test_fetch_convert_primitives.py  test_filter_service.py  test_grounding.py  test_kclaim_schema.py  test_knode_schema.py  test_lifecycle_integration.py  test_link_tools.py  test_load_criteria.py  test_miner_tools.py  test_model_slots.py  test_prompts.py  test_single_paper_ingest.py  test_staging_metadata.py  test_staging_tools.py  test_vault_tools.py  test_w2_bfs.py  test_w2_result.py  test_write_result.py
(+82 files in other folders)
