[project]
name = "chimera-lite-mcp"
version = "0.1.0"
description = "MCP servers for Chimera Lite — vault query + arXiv paper mining, driven by Claude Code."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.6",
    # config.py's own footprint (ported in M.0.5): TOML read/write + .env + settings
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "tomlkit>=0.13",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "ddgs>=6.0",
    # arxiv_fetch's own footprint (M.2a)
    "requests>=2.31",
    # --- M.2b paper-pipeline ML stack (chimera-dependency-veto OVERRIDE) ---
    # MinerU: PDF -> Markdown via ML pipeline (layout detection + OCR + formula).
    # Approved as a core Chimera capability — no lighter alternative for academic PDFs.
    # Exit strategy: mineru is called only in ports/ingest/mineru_pipeline.py; retiring it
    # means replacing one file. torch is pulled because MinerU's models require it.
    # torch: CUDA cu128 build for RTX 5060 (Blackwell, sm_120) — NOT CPU-only. >=2.7 is the
    # first series with cu128/sm_120 wheels.
    "torch>=2.7,<3",
    "mineru[core]>=1.4",
    # direct footprint of the daily-pipeline chain (M.2b): templating, LLM client, retries
    "jinja2>=3.1",
    "openai>=1.40",
    "tenacity>=8.2",
]

# External runtime requirement (not a Python dep):
#   ripgrep (`rg`) must be on PATH — chimera-vault's vault_query shells out to it.

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Each MCP server dir is its own import root (servers run as scripts from inside).
pythonpath = ["mcp-servers/chimera-papers", "mcp-servers/chimera-vault"]

[tool.uv]
package = false

# RTX 5060 (Blackwell, sm_120) needs the CUDA 12.8 torch build, not the default
# CPU-only PyPI wheel. Driver supports CUDA 13.1 (backward-compatible with cu128).
[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
